crates/aranya-policy-compiler/tests/data/type_errors/serialize_wrong_type_invalid_type.fail.policy
command Foo {
    seal { return serialize(3) }
    open { return todo() }
    policy {}
}
